Fixed MessageBar input overflow

--- a/components/Chatbot/components/Footer/MessageBar/MessageBar.scss
+++ b/components/Chatbot/components/Footer/MessageBar/MessageBar.scss
@@ -35,16 +35,23 @@
 
   // Input
   // --------------------------------------------------------------------------
-  
+  &-input {
+    align-self: stretch;
+    display: flex;
+    // align-items: center;
+    flex-grow: 1;
+    padding: calc(var(--pf-t--global--spacer--100) + var(--pf-t--global--spacer--300)) var(--pf-t--global--spacer--400);
+  }
   .pf-chatbot__message-textarea {
     align-self: stretch;
     display: flex;
-    align-items: center;
+    // align-items: center;
     flex-grow: 1;
     max-width: 100%;
-    max-height: 192px;    
+    max-height: 232px; // 8 rows + padding
     font-size: var(--pf-t--global--font--size--md);
-    padding: calc(var(--pf-t--global--spacer--100) + var(--pf-t--global--spacer--300)) var(--pf-t--global--spacer--400);
+    line-height: 24px;
+    
   }    
 
   // Actions
